fixing alignment issues by adding css to portfolio. Updated the pagging on the images to make better spacing

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,7 @@
+body {
+    padding-top: 70px;
+}
+
 .nav-link, .navbar-toggler {
     color: white !important;
     border-color: white !important;
