--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    padding-top: 70px;
+}
+
 .jumbotron {
     background-size: cover;
     background-position: center center;
